[package]
version = "1.0.0-rc3"
name = "yarn-why"
description = "yarn why, but fast"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
homepage = "https://github.com/riquito/yarn-why"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
fxhash = "0.2.1"
once_cell = "1.19.0"
pico-args = "0.5.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
yarn-lock-parser = { version = "0.7.0" }

[dev-dependencies]
assert_cmd = "2.0.14"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
