[package]
version = "1.0.0-rc3"
name = "yarn-why"
description = "yarn why, but fast"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
homepage = "https://github.com/riquito/yarn-why"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
fxhash = "0.2.1"
once_cell = "1.19.0"
pico-args = "0.5.0"
semver = "1.0.22"
serde = { version = "1.0.199", features = ["derive", "rc"] }
serde_json = "1.0.116"
yarn-lock-parser = { version = "0.7.0" }

[dev-dependencies]
assert_cmd = "2.0.14"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[profile.web-release]
# To be used with
# cargo build --target wasm32-wasi --profile=web-release
# then we get our wasm file at
# target/wasm32-wasi/web-release/yarn-why.wasm
inherits = "release"
opt-level = "s"